--- a/views/vanzare.ejs
+++ b/views/vanzare.ejs
@@ -62,6 +62,10 @@
                     P
                     <span class="prep" style="font-size:20px;"></span>
                 </div>
+                <div class="nav-buts-1">
+                    <i class="bi bi-cash"></i>
+                </div>
+                <div class="hide-wrapper">
                 <div class="unreg-wrapper" style="margin: 0 10px 0 auto;">
                     <span class="unregistred"></span>
                 </div>
@@ -83,7 +87,8 @@
                         <% } else {%>
                             <span class="addSuma me-5" style="font-size:30px; color:green;"> +<%=result.sum%></span>
                             <% } %>
-                <li class="nav-item dropdown center me-5" style="list-style: none;">
+                </div>
+                <li class="nav-item dropdown center me-5" style="list-style: none; margin-left:auto;">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-display="static"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-person fs-2"></i>
