--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,9 +53,7 @@ body{
 }
 
 .unregistred{
-    font-size:30px; 
-    color:red; 
-   
+    font-size:30px;
 }
 
 .unreg-wrapper{
@@ -70,6 +68,14 @@ body{
     width: 100%;
     margin: 15px 0px 0px 30px;
 }
+
+.hide-wrapper{
+    display: flex;
+    flex-direction:row;
+    align-items: baseline;
+    margin-left: auto;
+}
+
 
 .raport-wrapper button{
  background-color: #e0d4c9;
@@ -93,6 +99,18 @@ body{
     height: 45px;
     margin: 0 5px 0 0;
     background-color:#e0d4c9;
+}
+.nav-buts-1{
+    cursor: pointer;
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+    width: 85px;
+    margin: 0 5px 0 30px;
+    background-color:#e0d4c9;
+}
+.nav-buts-1 i{
+    font-size: 34px;
 }
 
 #back-office{
