--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -160,7 +160,8 @@ body{
     text-align: center;
     background-color: #e5e6e4;
     padding: 0;
-    margin: 20px 0 0 0;
+    margin: 20px 5px 0 0;
+    border-radius: 8px;
     display: flex; 
     align-items: baseline; 
 }
